# gfx_tutorial

./: .gitignore  .gitmodules  Bundle.toml  Cargo.toml
.cargo/: config
data/shader/: standard.fs  standard.vs
data/shader/glsl/: standard.fs  standard.vs
data/shader/msl/: standard.fs  standard.vs
src/: lazy_load.rs  load.rs  main.rs  mesh.rs  model.rs  model_load.rs  text.rs  util.rs
src/controllers/: camera_controller.rs  mod.rs  player_controller.rs
src/gfx_rusttype/: Cargo.toml
src/gfx_rusttype/data/glsl/: text.fs  text.vs
src/gfx_rusttype/src/: lib.rs
src/graphics/: camera.rs  fps_counter.rs  load.rs  mod.rs  model.rs
src/graphics/platform/: dx11.rs  gl.rs  metal.rs  mod.rs
src/platform/: dx11.rs  gl.rs  metal.rs  mod.rs
