[package]
name = "gfx_tutorial"
version = "0.1.0"
authors = ["georgeburton"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
alga = "0.5"
angular = { version = "0.1", git = "http://github.com/burtonageo/angular-rust" }
find_folder = "0.*"
gfx = "0.14"
gfx_device_gl = "0.13"
gfx_text = "0.15.0"
gfx_window_glutin = "0.14"
glutin = "0.7"
image = "0.12"
lazy_static = "0.*"
nalgebra = "0.11"
num = "0.1"
scopeguard = "0.3"
time = "0.1"
void = "1.0.2"
wavefront_obj = "5.0"
winit = "0.5.1"

#[target.'cfg(target_os = "macos")'.dependencies.gfx_device_metal]
#version = "0.1"

#[target.'cfg(target_os = "macos")'.dependencies.gfx_window_metal]
#version = "0.1"