[package]
name = "gfx_tutorial"
version = "0.1.0"
authors = ["georgeburton"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
alga = "0.5"
ang = "0.2"
find_folder = "0.*"
gfx = { version = "0.14", path = "./vendor/gfx/src/render" }
gfx_device_gl = { version = "0.13", path = "./vendor/gfx/src/backend/gl" }
gfx_text = "0.15"
gfx_window_glutin = { version = "0.14", path = "./vendor/gfx/src/window/glutin" }
glutin = "0.7"
image = "0.12"
lazy_static = "0.*"
nalgebra = "0.11"
num = "0.1"
rusttype = "0.2"
scopeguard = "0.3"
time = "0.1"
void = "1.0.2"
wavefront_obj = "5.0"
winit = "0.5.1"

[target.'cfg(target_os = "windows")'.dependencies.gfx_device_dx11]
version = "0.5"
path = "./vendor/gfx/src/backend/dx11"

[target.'cfg(target_os = "windows")'.dependencies.gfx_window_dxgi]
version = "0.6"
path = "./vendor/gfx/src/window/dxgi"

[target.'cfg(target_os = "macos")'.dependencies.gfx_device_metal]
version = "0.1"
path = "./vendor/gfx/src/backend/metal"

[target.'cfg(target_os = "macos")'.dependencies.gfx_window_metal]
version = "0.1"
path = "./vendor/gfx/src/window/metal"