[package]
name = "gfx_tutorial"
version = "0.1.0"
authors = ["georgeburton"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
alga = "0.5"
ang = "0.2"
apply = "0.2"
find_folder = "0.*"
gfx = "0.17"
gfx_device_gl = { version = "0.15", optional = true }
gfx_glyph = "0.9"
gfx_window_glutin = { version = "0.21", optional = true }
glutin = { version = "0.13", optional = true }
image = "0.18"
lazy_static = "0.*"
nalgebra = "0.14"
num = "0.1"
scopeguard = "0.3"
time = "0.1"
void = "1.0.2"
wavefront_obj = "5.0"
winit = "0.11"

[target.'cfg(target_os = "windows")'.dependencies.gfx_device_dx11]
version = "0.6"
optional = true

[target.'cfg(target_os = "windows")'.dependencies.gfx_window_dxgi]
version = "0.9"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx_device_metal]
version = "0.2"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx_window_metal]
version = "0.3"
optional = true

[features]
default = ["gl"]
gl = ["glutin", "gfx_window_glutin", "gfx_device_gl"]
metal = ["gfx_device_metal", "gfx_window_metal"]
dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]